--- a/program.html
+++ b/program.html
@@ -230,13 +230,10 @@
                         <br>
 			<br>
 			<li><b>Posters:</b></li>
-			<li> - <b>"News Recommender System for Political Depolarization"</b>, Uroš Sergaš, Marko Tkalcic and Bruce Ferwerda</li><br>
-
-			<li> - <b>"From Field to Algorithm: Challenges in Building Recommender Systems with Farmers for a Sustainable Future"</b>, Veronika Bogina, Ilan Halachmi and Noam Koenigstein Koenigstein</li><br>
-
-			<li> - <b>"Correcting for Popularity Bias in Recommender Systems via Item Loss Equalization"</b>, Juno Prent and Masoud Mansoury </li><br>
-
-			<li> - <b>"Multi-stakeholder Recommender Systems with Volatile Items"</b>, Tahereh Arabghalizi and Alexandros Labrinidis </li><br>
+			<li> - <b>"News Recommender System for Political Depolarization"</b>, Uroš Sergaš, Marko Tkalcic and Bruce Ferwerda</li>
+			<li> - <b>"From Field to Algorithm: Challenges in Building Recommender Systems with Farmers for a Sustainable Future"</b>, Veronika Bogina, Ilan Halachmi and Noam Koenigstein Koenigstein</li>
+			<li> - <b>"Correcting for Popularity Bias in Recommender Systems via Item Loss Equalization"</b>, Juno Prent and Masoud Mansoury </li>
+			<li> - <b>"Multi-stakeholder Recommender Systems with Volatile Items"</b>, Tahereh Arabghalizi and Alexandros Labrinidis </li>
 					  </ul>
                     </p>				
                 </div>
