--- a/program.html
+++ b/program.html
@@ -163,7 +163,7 @@
             <div class="row">
 
 				<div class="col-lg-12">
-                    <h2 class="noo-sh-title-top">Workshop Day: October 18th, 2024</span></h2>
+                    <h2 class="noo-sh-title-top">Workshop Day: October 18th, 2024 - Room C located at Politecnico di Bari</span></h2>
 
 					<!--<p style="text-align: justify; color :black">
                     Proceedings of XAI.it are now available on CEUR.ws (volume ) <a style="text-align: justify; color :black" href="http://ceur-ws.org/"><h3>Go To The Proceedings</h3></a>
