--- a/call.html
+++ b/call.html
@@ -206,7 +206,7 @@ contribute to a more sustainable and responsible technology ecosystem, aligning 
 
                       * Notification to authors: <b>September 13th, 2024</b><br>
 
-                      * Camera-Ready submission: <b>TBD for post-proceedings in a volume published by Springer, in the CCIS Series.</b><br>
+                      * Camera-Ready submission: <b>November 10th, 2024 (AoE) for post-proceedings in a volume published by Springer, in the CCIS Series.</b><br>
 					  <br>
 
                     </p>
