--- a/program.html
+++ b/program.html
@@ -175,7 +175,7 @@
 					<p style="text-align: justify; color :black">
                       <ul>
 			      <div class="banner-frame"> <img class="img-fluid" src="images/Said.jpg" style="width: 150px; height: 150px" alt="Responsive image" />
-						<li><b>When: </b>October 18th, h. (to be defined) </li>
+						<li><b>When: </b>October 18th, h. 14:15 </li>
 						<li><b>Speaker: </b> Alan Said, University of Gothenburg</li>
 						<li><b>Title: </b> Recommenders for Social Good: The Role of Accountability and Sustainability</li>
 						<br>
