--- a/program.html
+++ b/program.html
@@ -209,7 +209,7 @@
                         <br>
                         <li><b>h.11.00 - 12.30, Session 2 - Energy and Carbon Efficiency in Recommender Systems</b></li>
 			<li><i>(12 min. presentation + 5 min. Q&A per LONG paper - 8 min. presentation + 4 min. Q&A per SHORT paper)</i></li>  
-                        <li>- <b>"Sustainable Recommender Systems: Optimizing Dataset Size for Energy-Efficient Algorithm Performance"</b>, Ardalan Arabzadeh, Tobias Vente and Joeran Beel - SHORT paper</li>
+                        <li>- <b>"Green Recommender Systems: Optimizing Dataset Size for Energy-Efficient Algorithm Performance"</b>, Ardalan Arabzadeh, Tobias Vente and Joeran Beel - SHORT paper</li>
 			<li>- <b>"EMERS: Energy Meter for Recommender Systems"</b>, Lukas Wegmeth, Tobias Vente, Alan Said and Joeran Beel - SHORT paper</li>
 			<li>- <b>"e-Fold Cross-Validation for Recommender-System Evaluation"</b>, Moritz Baumgart, Lukas Wegmeth, Tobias Vente and Joeran Beel - SHORT paper</li>
 			<li>- <b>"RecSys CarbonAtor: Predicting Carbon Footprint of Recommendation System Models"</b>, Giuseppe Spillo, Alberto Gaetano Valerio, Felice Franchini, Allegra De Filippo, Cataldo Musto, Michela Milano and Giovanni Semeraro - LONG paper</li>
