--- a/papers.html
+++ b/papers.html
@@ -188,7 +188,7 @@
 
 <li>- Antonio Purificato and Fabrizio Silvestri - "Eco-Aware Graph Neural Networks for Sustainable Recommendations"</li><br>
 
-<li>- Ardalan Arabzadeh, Tobias Vente and Joeran Beel - "Sustainable Recommender Systems: Optimizing Dataset Size for Energy-Efficient Algorithm Performance"</li><br>
+<li>- Ardalan Arabzadeh, Tobias Vente and Joeran Beel - "Green Recommender Systems: Optimizing Dataset Size for Energy-Efficient Algorithm Performance"</li><br>
 
 <li>- Ashmi Banerjee, Adithi Satish and Wolfgang Wörndl - "Enhancing Tourism Recommender Systems for Sustainable City Trips Using Retrieval-Augmented Generation"</li><br>
 
